# TPN

./: README.md  app.py  calculation.py  models.py  pyproject.toml  requirements.txt  utils.py
calculation/: infusion_calculator.py
data/: additives.json  base_solutions.json  solutions.json
models/: ._infusion_mix.py  additive.py  infusion_mix.py  patient.py  solution.py
tests/: test_calculation.py  test_caluculation.py
utils/: data_loader.py  logging_config.py
